refactor: id & timestamp param update 2
